# tree-todo-py

./: README.md  pyproject.toml  traces.json
tests/: test_app.py  test_markdown.py  test_model.py  test_persistence.py
tree_todo/: __init__.py  app.py  markdown.py  model.py  persistence.py
